Add 17-20 (all included) specs Point sqlc into all migration files, so all schemas files were deleted and generated package was remade
