# go-server/internal/services/check.go
@@ -3,6 +3,7 @@ package services
 import (
 	"context"
 	"fmt"
+	"github.com/Dzhodddi/ZLAGODA/internal/db/generated"
 	"strings"
 	"time"
 
@@ -15,6 +16,16 @@ type CheckService interface {
 	CreateCheck(ctx context.Context, check views.CreateNewCheck, printTime time.Time) (*views.CheckResponse, error)
 	DeleteCheck(ctx context.Context, checkNumber string) error
 	GetCheck(ctx context.Context, checkNumber string) (*views.CheckResponseWithProducts, error)
+	GetCheckList(
+		ctx context.Context,
+		q views.CheckListQueryParams,
+		startDate, endDate time.Time,
+	) ([]views.CheckListResponse, error)
+	GetTotalCheckPrice(
+		ctx context.Context,
+		q views.CheckListQueryParams,
+		startDate, endDate time.Time,
+	) (float64, error)
 }
 
 type checkService struct {
@@ -67,4 +78,61 @@ func (s *checkService) GetCheck(ctx context.Context, checkNumber string) (*views
 		return nil, fmt.Errorf("failed to get check: %w", err)
 	}
 	return mappers.CheckModelWithProductsToResponse(check), nil
+}
+
+func (s *checkService) GetCheckList(
+	ctx context.Context,
+	q views.CheckListQueryParams,
+	startDate, endDate time.Time,
+) ([]views.CheckListResponse, error) {
+	var checkList []generated.CheckListView
+	var err error
+
+	switch {
+	case q.EmployeeID != nil:
+		checkList, err = s.checkRepository.GetChecksWithProductsByCashierWithinDate(
+			ctx,
+			*q.EmployeeID,
+			startDate,
+			endDate,
+		)
+	default:
+		checkList, err = s.checkRepository.GetAllChecksWithProductsWithinDate(
+			ctx,
+			startDate,
+			endDate,
+		)
+	}
+	if err != nil {
+		return nil, fmt.Errorf("failed to get checks: %w", err)
+	}
+	result := make([]views.CheckListResponse, 0, len(checkList))
+	for i := range checkList {
+		result = append(result, *mappers.CheckListViewToResponse(&checkList[i]))
+	}
+	return result, nil
+}
+
+func (s *checkService) GetTotalCheckPrice(
+	ctx context.Context,
+	q views.CheckListQueryParams,
+	startDate, endDate time.Time,
+) (float64, error) {
+	var totalPrice float64
+	var err error
+	switch {
+	case q.EmployeeID != nil:
+		totalPrice, err = s.checkRepository.GetTotalPriceByCashierWithinDate(
+			ctx,
+			*q.EmployeeID,
+			startDate, endDate)
+	default:
+		totalPrice, err = s.checkRepository.GetTotalPriceByAllCashiersWithinDate(
+			ctx,
+			startDate, endDate)
+	}
+	if err != nil {
+		return 0, fmt.Errorf("failed to get total price: %w", err)
+	}
+	return totalPrice, nil
 }
